--- a/scss/custom-bootstrap.scss
+++ b/scss/custom-bootstrap.scss
@@ -1,4 +1,11 @@
 /* insert changes to variables here */
 /* refer to bootstrap-4.0.0-alpha/scss/variables to see what you can override */
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+$gray-lightest: purple;
 
+$font-family-base:        'Roboto';
+$btn-primary-bg:            pink;
 @import '../bootstrap-4.0.0-alpha/scss/bootstrap';
+
+
+
